# paper-feeder

./: README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  scan.yml
config/: sources.yaml
docs/: feed.xml  index.html
examples/consumer/: README.md
examples/consumer/.claude/commands/: compile-lexicon.md
examples/consumer/.github/workflows/: scan.yml
examples/consumer/config/: scoring.yaml  sources.yaml
examples/consumer/seeds/: README.md
src/paper_feeder/: __init__.py  config.py  dedupe.py  main.py  models.py  normalize.py  render.py  rerank.py  score.py  seen.py  window.py
src/paper_feeder/fetch/: __init__.py  crossref.py  http.py  openalex.py  rss.py
tests/: test_dedupe.py  test_main.py  test_normalize.py  test_openalex.py  test_render.py  test_rss.py  test_score.py  test_seen.py  test_window.py
